use default jacoco default path and add rest test for actuator (#27)
* use default jacoco default path and add rest test for actuator