@@ -17,6 +17,10 @@
     <name>${project.artifactId}</name>
     <description>${project.artifactId}</description>
 
+    <organization>
+        <name>dboeckli</name>
+    </organization>
+
     <scm>
         <connection>scm:git:https://github.com/${organization.name}/${project.artifactId}.git</connection>
         <developerConnection>scm:git:https://github.com/${organization.name}/${project.artifactId}.git</developerConnection>
@@ -26,8 +30,6 @@
 
     <properties>
         <java.version>21</java.version>
-
-        <organization.name>dboeckli</organization.name>
 
         <github.acions.build>false</github.acions.build>
         <skip.docker.publish>true</skip.docker.publish>
@@ -340,6 +342,22 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>test</goal>
+                        </goals>
+                        <configuration>
+                            <!--suppress UnresolvedMavenProperty. argline is set by jacoco -->
+                            <argLine>${argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <executions>
                     <execution>
@@ -347,6 +365,10 @@
                             <goal>integration-test</goal>
                             <goal>verify</goal>
                         </goals>
+                        <configuration>
+                            <!--suppress UnresolvedMavenProperty. argline is set by jacoco -->
+                            <argLine>${argLine} -XX:+EnableDynamicAgentLoading -Xshare:off</argLine>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -371,7 +393,10 @@
                             <goal>report</goal>
                         </goals>
                         <configuration>
-                            <outputDirectory>target/jacoco-reports</outputDirectory>
+                            <formats>
+                                <format>XML</format>
+                            </formats>
+                            <outputDirectory>target/site/jacoco</outputDirectory> <!-- default -->
                         </configuration>
                     </execution>
                 </executions>
